第五天 完成登录

--- a/ihome/static/html/login.html
+++ b/ihome/static/html/login.html
@@ -29,6 +29,14 @@
                 </div>
             </div>
             <div class="error-msg" id="password-err"><i class="fa fa-exclamation-circle"></i><span></span></div>
+            <div class="form-group form-group-lg">
+                <div class="input-group">
+                    <div class="input-group-addon"><i class="fa fa-image fa-lg fa-fw"></i></div>
+                    <input type="text" class="form-control" name="imagecode" id="imagecode" placeholder="图片验证码" required>
+                    <div class="input-group-addon image-code" onclick="generateImageCode();"><img src=""></div>
+                </div>
+            </div>
+            <div class="error-msg" id="image-code-err"><i class="fa fa-exclamation-circle"></i><span></span></div>
             <button type="submit" class="btn btn-lg btn-theme btn-block">登录</button>
             <p class="register-a">没有账号，<a href="/register.html">立即注册</a></p>
         </form>
